@@ -10,6 +10,7 @@
 * Added additional escaping on some translated strings.
 * Improved the overview dashboard section, user is taken to the home after logout.
 * Several code format improvements and replaced use of alias functions.
+* Fixed wrong page ID recorded for user registration referrals on checkout.
 
 = 4.0.4 =
 * Minor security improvements related to escaping output.
